fixed shadow and overflow y on stories

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -144,7 +144,7 @@ body {
 .story {
   background-color: #ffffff;
   width: 75%;
-  box-shadow: 3px 3px 3px 3px rgb(189, 188, 188);
+  box-shadow: 1px 2px 2px 1px rgb(230, 229, 229);
   height: fit-content;
   padding: 0 15px;
   margin-bottom: 50px;
@@ -172,6 +172,6 @@ footer {
 .collapsible {
   transition: all 0.75s linear;
   transition-delay: 0ms;
-  overflow-y: hidden;
+  overflow-y: auto;
   margin-bottom: 0px;
 }
